--- a/README
+++ b/README
@@ -6,8 +6,8 @@ mill = require('mill');
 
 //factory call to generate model - Post
 post = mill.Post() //returns a vanilla, milled object
-comment =  mill.Comment() //returns an instantiated, milled object
-comment = mill.Comment()({create: false}) //returns an uninstantiated milled ob
+comment =  mill.Comment() //returns an saved milled model
+comment = mill.Comment()({create: false}) //returns an unsaved milled model
 
 
 //-----------
