testing index.js

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+The title of this project will probably change, still messing about with name ideas.
+
+Other options: weft.js
+
+
+DSL
+
 this is the rough dsl I'm aiming for
 
 //some test file
